# android-firmware-qti-sdm670

./: .gitattributes  README.md  about.html  contents.xml
LINUX/android/: sync.sh
adsp_proc/: DynModulesSize.csv  q6_build_version.h  qcom_timestamp.h
adsp_proc/hap/: ConvertDos2Unix.sh  default_pack.txt  remove_cygwin.cmd
adsp_proc/sectools/: sectools_builder.py
boot_images/: .p4ignore  BuildNotes2.txt  Edk2Setup.bat  UEFI_License_and_Notice_File_QC.txt  edksetup.bat  klocwork.bat  packit.py  watchit.py
boot_images/ArmPkg/: ArmPkg.dec
boot_images/ArmPlatformPkg/: ArmPlatformPkg.dec
boot_images/BaseTools/: .gitignore  BuildNotes.txt
boot_images/EmbeddedPkg/: EmbeddedPkg.dec
boot_images/FatPkg/: FatPkg.dec  FatPkg.dsc  FatPkg.uni  FatPkgExtra.uni
boot_images/IntelFrameworkModulePkg/: IntelFrameworkModulePkg.dec
boot_images/MdeModulePkg/: MdeModulePkg.dec  MdeModulePkg.dsc  MdeModulePkg.uni
boot_images/MdePkg/: MdePkg.dec
boot_images/QcomPkg/: QcomPkg.dec  XBLLoaderApi.dec  aliasconfig.json  buildex.py  delcommonts.py  toolchainconfig.json
boot_images/QcomPkg/Tools/storage/fh_loader/QSaharaServer/src/: CMakeLists.txt  comm.c  comm.h  common_protocol_defs.h  external_utils.c  kickstart.c  kickstart_log.c  kickstart_log.h  kickstart_utils.c  kickstart_utils.h  sahara_protocol.c  sahara_protocol.h
boot_images/ShellPkg/: ShellPkg.dsc
cdsp_proc/: DynModulesSize.csv  q6_build_version.h  qcom_timestamp.h
cdsp_proc/hap/: ConvertDos2Unix.py  ConvertUnix2Dos.py  default_pack.txt  default_test.txt  ide_settings.xml
cdsp_proc/sectools/: README.txt  (+1 more)
(+13176 files in other folders)
